// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders a toggle component 1`] = `
<div
  class="friends"
>
  <div
    class="header"
  >
    <nav>
      <ul>
        <li>
          <a
            href="index.html"
          >
            Home
          </a>
        </li>
        <li>
          <a
            href="/about/"
          >
            About
          </a>
        </li>
        <li>
          <a
            href="/blog/"
          >
            Blog
          </a>
        </li>
      </ul>
    </nav>
    <div
      class="nav-switch"
    >
      <div>
        Enable Emoji
      </div>
      <label
        aria-label="Toggle"
        style="display: block;"
      >
        <input
          class="toggle-input"
          data-testid="toggle-input"
          type="checkbox"
        />
        <span
          aria-expanded="false"
          class="toggle-btn toggle-btn-off"
        />
      </label>
    </div>
  </div>
  <div>
    <div>
      <h1>
        Who is awesome?
      </h1>
      Teachers are awesome
    </div>
    <div>
      Once, I was in school when I realized something...
      <hr />
      Without teachers I wouldn't know anything so thanks teachers!
    </div>
  </div>
</div>
`;

exports[`renders a toggle component 2`] = `
<div
  class="friends"
>
  <div
    class="header"
  >
    <nav>
      <ul>
        <li>
          <a
            href="index.html"
          >
            🏡
          </a>
        </li>
        <li>
          <a
            href="/about/"
          >
            ❓
          </a>
        </li>
        <li>
          <a
            href="/blog/"
          >
            📖
          </a>
        </li>
      </ul>
    </nav>
    <div
      class="nav-switch"
    >
      <div>
        🦄
      </div>
      <label
        aria-label="Toggle"
        style="display: block;"
      >
        <input
          class="toggle-input"
          data-testid="toggle-input"
          type="checkbox"
        />
        <span
          aria-expanded="true"
          class="toggle-btn toggle-btn-on"
        />
      </label>
    </div>
  </div>
  <div>
    <div>
      <h1>
        Who is 🕶❓
      </h1>
      👩‍🏫 👉 🕶
    </div>
    <div>
      Once, I was in 🏫‍ when I 🤔 something...
      <hr />
      Without 👩‍🏫 I wouldn't know anything so 🙏 👩‍🏫❗️
    </div>
  </div>
</div>
`;
